infra/apps-prod/firefly-iii-traefik-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: firefly-iii
  namespace: apps-prod
  annotations:
    traefik.io/router-middlewares: apps-prod-firefly-iii-headers@kubernetescrd,apps-prod-firefly-iii-timeout@kubernetescrd
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure

  hostnames:
    - firefly.k8s.harish2k01.xyz

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: firefly-iii
          port: 80
